finished food101 classifier base

--- a/notebooks/00_explore.ipynb
+++ b/notebooks/00_explore.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7e2bc442",
    "metadata": {},
    "outputs": [
@@ -18,25 +18,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using bucket mnist-data-927493231\n"
+      "8\n"
      ]
     }
    ],
    "source": [
-    "import sagemaker\n",
-    "import boto3\n",
+    "import os\n",
+    "print(os.cpu_count()) # check your CPU worker number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fcbfe7d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
     "\n",
-    "sm_boto3 = boto3.client('sagemaker')\n",
-    "sess = sagemaker.Session()\n",
-    "region = sess.boto_session.region_name\n",
-    "bucket = 'mnist-data-927493231'\n",
-    "print(\"Using bucket \" + bucket)"
+    "print(torch.__version__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcbfe7d1",
+   "id": "8058d020",
    "metadata": {},
    "outputs": [],
    "source": []
