--- a/notebooks/00_explore.ipynb
+++ b/notebooks/00_explore.ipynb
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5.1\n"
+      "2.6.0+cu126\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pytorch",
    "language": "python",
    "name": "python3"
   },
@@ -64,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
